--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
     <!-- CSS -->
     <link rel="stylesheet" href="/style.css" />
     <!-- akhir css -->
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+    <!-- Akhir AOS -->
 
     <title>My Portfolio | Alvin Zulfanur Bachtiar</title>
   </head>
@@ -46,7 +49,7 @@
     <section class="jumbotron text-center">
       <img src="/img/nicolas-horn-MTZTGvDsHFY-unsplash.jpg" alt="" width="150" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">James Bond</h1>
-      <p class="lead">UI Designer | Front End Developer</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#ffffff"
@@ -93,30 +96,30 @@
         </div>
         <div class="row justify-content-center">
           <div class="col-md-4 mb-3">
-            <div class="card">
-              <img src="img/Projects/hari-tran-ZXYtiSRfsQo-unsplash.jpg" class="card-img-top" alt="Projects1" />
+            <div class="card" data-aos="flip-left" data-aos-offset="400"  data-aos-duration="1000">
+              <img src="img/Projects/hari-tran-ZXYtiSRfsQo-unsplash.jpg" class="card-img-top"  alt="Projects1" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
+          <div class="col-md-4 mb-3" >
+            <div class="card" data-aos="fade-up" data-aos-offset="400"  data-aos-duration="1000">
               <img src="img/Projects/jay-zhang-1hODsNcJ7es-unsplash.jpg" class="card-img-top" alt="Projects2" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-left" data-aos-offset="400"  data-aos-duration="1000">
             <div class="card">
-              <img src="img/Projects/jay-zhang-qTIIfQv0Sw0-unsplash.jpg" class="card-img-top" alt="Projects3" />
+              <img src="img/Projects/jay-zhang-qTIIfQv0Sw0-unsplash.jpg" class="card-img-top"  alt="Projects3" />
               <div class="card-body">
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-up-right" data-aos-offset="400"  data-aos-duration="1000">
             <div class="card">
               <img src="img/Projects/jay-zhang-ZRoC_96HPnw-unsplash.jpg" class="card-img-top" alt="Projects4" />
               <div class="card-body">
@@ -124,7 +127,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-md-4 mb-3" data-aos="fade-up-left" data-aos-offset="400"  data-aos-duration="1000">
             <div class="card">
               <img src="img/Projects/vipul-jha-a4X1cdC1QAc-unsplash.jpg" class="card-img-top" alt="Projects5" />
               <div class="card-body">
@@ -144,6 +147,70 @@
     </section>
 
     <!-- Akhir Projects -->
+    <!-- Gallery -->
+    <section id="Gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/1.jpg" alt="Gallery1" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/2.jpg" alt="Gallery2" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/3.jpg" alt="Gallery3" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/4.jpg" alt="Gallery4" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/5.jpg" alt="Gallery5" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/6.jpg" alt="Gallery6" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/7.jpg" alt="Gallery7" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/8.jpg" alt="Gallery8" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/9.jpg" alt="Gallery9" class="img-fluid gallery-img">
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="/img/Gallery/10.jpg" alt="Gallery10" class="img-fluid gallery-img">
+            </a>
+          </div>
+          
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Gallery -->
     <!-- Contact -->
     <section id="Contact">
       <div class="container">
@@ -189,6 +256,7 @@
     </footer>
     <!-- Akhir Footer -->
 
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
     <script>
       const scriptURL = 'https://script.google.com/macros/s/AKfycbyjcyykjeX2kbZUkLptYJYUe5_ZeTZrwZX0BL-0NtJz1i_23EYscq632B7Wv5WJkjSZdQ/exec'
@@ -213,5 +281,28 @@
           .catch(error => console.error('Error!', error.message))
       })
     </script>
+      <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/gsap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.7.1/TextPlugin.min.js"></script>
+      <script>
+        gsap.registerPlugin(TextPlugin);
+        gsap.to('.lead', {duration: 2, delay: 1.5, text: 'UI Designer | Front End Developer' });
+        gsap.from('.jumbotron img',{duration : 1, rotateY: 360, opacity:0});
+        gsap.from('.navbar', {duration:1.5, y:'-100%', opacity:0, ease : 'bounce'});
+        gsap.from('.display-4', {duration:1, x:-50 , opacity:0, delay: 0.5});
+      </script>
+      <script>
+
+        const GalleryImage = document.querySelectorAll('.gallery-img');
+
+        GalleryImage.forEach((img, i) =>{
+          img.dataset.aos = 'fade-down';
+          img.dataset.aosDelay = i * 100;
+          img.dataset.aosDuration = 1000;
+        })
+        AOS.init({
+          once : true,
+        });
+      </script>
   </body>
 </html>
